@@ -24,41 +24,8 @@ dependencies {
     testCompile 'org.seleniumhq.selenium:selenium-java:2.48.2'
 }
 
-test {
-		println "soos"
-		println "soos"
-		println "soos"
-		println "soos"
-		
-	  // enable TestNG support (default is JUnit)
-	  useTestNG()
-		
-	  // set a system property for the test JVM(s)
-	  systemProperty 'some.prop', 'value'
-	
-	  // explicitly include or exclude tests
-	  include 'testng/**'
-	
-	  // show standard out and standard error of the test JVM(s) on the console
-	  testLogging.showStandardStreams = true
-	
-	  // set heap size for the test JVM(s)
-	  minHeapSize = "128m"
-	  maxHeapSize = "512m"
-	
-	  // set JVM arguments for the test JVM(s)
-	  jvmArgs '-XX:MaxPermSize=256m'
-	
-	  // listen to events in the test execution lifecycle
-	  beforeTest { descriptor ->
-	     logger.lifecycle("Running test: " + descriptor)
-	  }
-	
-	  // listen to standard out and standard error of the test JVM(s)
-	  onOutput { descriptor, event ->
-	     logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
-	  }
-}
+
+
 uploadArchives {
     repositories {
        flatDir {
